# uniasset

./: .gitignore  404.html  CNAME  LICENSE  README.md  README.zh-CN.md  index.html  sitemap.xml
.github/workflows/: ci-android.yml  ci-darwin.yml  ci-linux.yml  ci-windows.yml  releasing.yml  rust-tests.yml
Docs/: .gitignore  Makefile  mkdocs.yml  pyproject.toml
Docs/docs/: changelog.md  getting-started.md  index.md
Docs/docs/api/: audio-asset.md  crop-options.md  image-asset.md  index.md  iostream.md  pixel-type.md  resize-filter.md  sample-format.md  stream-wrapper.md
Docs/docs/en/: changelog.md  getting-started.md  index.md
Docs/docs/en/api/: audio-asset.md  crop-options.md  image-asset.md  index.md  iostream.md  pixel-type.md  resize-filter.md  sample-format.md  stream-wrapper.md
Docs/docs/en/guide/: audio-loading.md  custom-streams.md  (+1 more)
Docs/docs/guide/: audio-loading.md  custom-streams.md  image-loading.md
Docs/docs/stylesheets/: landing.css
Native/: .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  vcpkg.json
Native/.cargo/: config.toml
Native/scripts/: arm64-ios-bitcode.cmake  build-android.sh  clangsharp-bindgen.sh  clangsharp-binding.rsp  export-symbols.txt  ios-link-library.sh  ld-version.script
Native/src/audio/: audio_asset.rs  decoder.rs  magic_number.rs
Native/src/ffi/: audio.rs  image.rs  io.rs
Native/src/image/: image_asset.rs
Native/src/uniasset/: CBinding.cpp  CBinding.h  CMakeLists.txt  Foundation.hpp
Native/src/uniasset.test/: CMakeLists.txt  main.cpp
Native/src/uniasset/audio/: AudioAsset.cpp  AudioAsset.hpp  AudioConfig.hpp  AudioDevice.cpp  AudioDevice.hpp  AudioPlayer.cpp  AudioPlayer.hpp  BufferedAudioDecoder.cpp  BufferedAudioDecoder.hpp  ExternalAudioDecoder.cpp  ExternalAudioDecoder.hpp  FlacDecoder.cpp  FlacDecoder.hpp  IAudioDecoder.cpp  IAudioDecoder.hpp  MiniAudioPlayer.cpp  MiniAudioPlayer.hpp  Mp3Decoder.cpp  Mp3Decoder.hpp  OboeAudioPlayer.cpp  OboeAudioPlayer.hpp  OggDecoder.cpp  OggDecoder.hpp  SampleFormat.hpp  WavDecoder.cpp  WavDecoder.hpp
Native/src/uniasset/audio/player/: AudioEngine.cpp  AudioEngine.hpp  AudioMixer.cpp  AudioMixer.hpp  AudioPlayer.cpp  AudioPlayer.hpp  DecoderDataSource.cpp  DecoderDataSource.h  DecoderDataSource.hpp  IWaveProvider.hpp  PlaybackInstance.cpp  PlaybackInstance.h  PlaybackInstance.hpp  PlayingHandler.cpp  PlayingHandler.hpp
Native/src/uniasset/audio/player/waves/: AdaptWaveProvider.cpp  AdaptWaveProvider.hpp  BufferedWaveProvider.cpp  BufferedWaveProvider.hpp
Native/src/uniasset/common/: AudioUtils.hpp  Buffer.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Errors.cpp  Errors.hpp  IAudioDecoder.cpp  IAudioDecoder.hpp  IAudioPlayer.cpp  IAudioPlayer.hpp  IJob.hpp  MagicNumbers.hpp  Result.hpp  RingQueueBuffer.cpp  RingQueueBuffer.hpp  Templates.hpp  Utils.cpp  Utils.hpp
Native/src/uniasset/image/: ImageAsset.cpp  ImageAsset.hpp  ImageProcessor.cpp  ImageProcessor.hpp  Pixels.hpp
Native/uniasset/: Cargo.toml
Native/uniasset/src/: audio.rs  error.rs  ffi.rs  lib.rs  native.rs
Native/uniasset/src/audio/: audio_asset.rs  decoder.rs  ffi.rs  magic_number.rs  mod.rs  sample_format.rs
Native/uniasset/src/audio/decoder/: impl_symphonia.rs  interface.rs
Native/uniasset/src/ffi/: audio.rs  image.rs  io.rs  object.rs
Native/uniasset/src/image/: buffer.rs  crop_options.rs  ffi.rs  image_asset.rs  magic_number.rs  mod.rs
Native/uniasset/src/image/resizer/: box_filter.rs  gaussian.rs  lanczos3.rs  nearest.rs
Native/uniasset/src/images/: ffi.rs  image_asset.rs  mod.rs
Native/uniasset/src/io/: mod.rs
Native/uniasset/src/thread/: sync_unsafe_cell.rs
Source/Core/: Cargo.toml
Source/Core/src/: image.rs
Source/Core/uniasset/: Cargo.toml
Source/Core/uniasset-bridge/: Cargo.toml
Source/Core/uniasset/src/: lib.rs  thread.rs
Source/Core/uniasset/src/audio/: audio_asset.rs  magic_number.rs  sample_format.rs
Source/Core/uniasset/src/audio/decoder/: impl_pcm_frame.rs  impl_symphonia.rs  interface.rs
Source/Core/uniasset/src/image/: buffer.rs  crop_options.rs  image_asset.rs  magic_number.rs
Source/Core/uniasset/src/image/resizer/: box_filter.rs  gaussian.rs  lanczos3.rs  nearest.rs
Source/UnityDemo/ProjectSettings/: ProjectSettings.asset
Source/UnityEditorTool/: Config.cs  NativeLibraryConfigurator.cs  NativeLibraryDownloader.cs  Uniasset.Editor.asmdef
Source/UnitySDK/: IUniassetStream.cs  StreamWrapper.cs
Source/UnitySDK/Audio/: AudioAsset.cs  SampleFormat.cs
Source/UnitySDK/Image/: ImageAsset.cs  PixelType.cs
Source/UnitySDK/Unsafe/: Interop.LibName.cs  Interop.cs  UnsafeAudioAsset.cs  UnsafeIO.cs  UnsafeImageAsset.cs
Unity/Uniasset.Editor/: Config.cs
Unity/Uniasset/Audio/: AudioAsset.cs  AudioDecoder.cs  NativeAudioDecoder.cs
Unity/Uniasset/Image/: CropOptions.cs  ImageAsset.cs  ResizeFilter.cs
Unity/Uniasset/Native/: .gitignore
Unity/Uniasset/Unsafe/: Interop.cs  MonoPInvokeCallbackAttribute.cs  NativeTypeNameAttribute.cs  UnsafeAudioAsset.cs  UnsafeAudioDecoder.cs  UnsafeIO.cs  UnsafeImageAsset.cs
Unity/UniassetTest/ProjectSettings/: ProjectSettings.asset
api/: index.html
api/audio-asset/: index.html
api/crop-options/: index.html
api/image-asset/: index.html
api/iostream/: index.html
api/pixel-type/: index.html
api/resize-filter/: index.html
api/sample-format/: index.html
api/stream-wrapper/: index.html
changelog/: index.html
en/: index.html
en/api/: index.html
en/api/audio-asset/: index.html
en/api/crop-options/: index.html
en/api/image-asset/: index.html
en/api/iostream/: index.html
en/api/pixel-type/: index.html
en/api/resize-filter/: index.html
en/api/sample-format/: index.html
en/api/stream-wrapper/: index.html
en/changelog/: index.html
en/getting-started/: index.html
en/guide/audio-loading/: index.html
en/guide/custom-streams/: index.html
en/guide/image-loading/: index.html
getting-started/: index.html
guide/audio-loading/: index.html
guide/custom-streams/: index.html
guide/image-loading/: index.html
search/: search_index.json
stylesheets/: landing.css
(+46 files in other folders)
