[package]
name = "uniasset"
version = "0.1.0"
edition = "2024"

[dependencies]
libwebp-sys = "0.13"
stb_image = "0.3.0"
fast_image_resize = "6.0.0"
anyhow = "1.0.102"

[lib]
name = "uniasset"
crate-type = ["staticlib", "cdylib"]

[target.'cfg(target_os = "ios")']
rustflags = [
    "-C",
    "link_arg=-miphoneos-version-min=10.0",
    "llvm-args=\"-fembed-bitcode\"",
]
