[package]
name = "uniasset"
version = "0.2.0"
edition = "2024"

[dependencies]
libwebp-sys = "0.13"
stb_image = "0.3.0"
anyhow = "1.0.102"
zune-jpeg = "0.5.12"
symphonia = { version = "0.6", default-features = false, features = [
    "mp3",
    "flac",
    "wav",
    "pcm",
    "vorbis",
    "ogg",
    "aac",
] }
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
parking_lot = "0.12.5"

[lib]
name = "uniasset"
